deadbeef.h


typedef struct DB_playItem_s {
    int32_t startsample DEPRECATED_110;
    int32_t endsample DEPRECATED_110;
    int32_t shufflerating; 
} ddb_playItem_t;
typedef ddb_playItem_t DB_playItem_t;
typedef struct {
    char unused; 
} ddb_playlist_t;
typedef enum ddb_playback_state_e {
    DDB_PLAYBACK_STATE_STOPPED = 0,
    DDB_PLAYBACK_STATE_PLAYING = 1,
    DDB_PLAYBACK_STATE_PAUSED = 2,
} ddb_playback_state_t;
typedef struct {
    struct DB_vfs_s *vfs;
} DB_FILE;
typedef struct {
    int bps;
    int channels;
    int samplerate;
    uint32_t channelmask;
    int is_float; 
#if (DDB_API_LEVEL >= 17)
    uint32_t flags;
#else
    int is_bigendian;
#endif
} ddb_waveformat_t;
struct DB_plugin_s;
enum {
    DB_ACTION_COMMON = 1 << 0,
    DB_ACTION_SINGLE_TRACK = 1 << 1,
    DB_ACTION_MULTIPLE_TRACKS = 1 << 2,
    DB_ACTION_ALLOW_MULTIPLE_TRACKS DEPRECATED_15 = 1 << 2,
    DB_ACTION_CAN_MULTIPLE_TRACKS DEPRECATED_15 = 1 << 3,
    DB_ACTION_DISABLED = 1 << 4,
#if (DDB_API_LEVEL >= 2)
    DB_ACTION_PLAYLIST = (1 << 5),
#endif
#if (DDB_API_LEVEL >= 5)
    DB_ACTION_ADD_MENU = 1 << 6,
#endif
#if (DDB_API_LEVEL >= 10)
    DB_ACTION_EXCLUDE_FROM_CTX_PLAYLIST = 1 << 7
#endif
};
typedef enum ddb_action_context_e {
#else
enum {
#endif
    DDB_ACTION_CTX_MAIN,
    DDB_ACTION_CTX_SELECTION,
    DDB_ACTION_CTX_PLAYLIST,
    DDB_ACTION_CTX_NOWPLAYING,
    DDB_ACTION_CTX_COUNT
#if (DDB_API_LEVEL >= 11)
} ddb_action_context_t;
#else
};
struct DB_plugin_action_s;
typedef int (*DB_plugin_action_callback_t) (struct DB_plugin_action_s *action, void *userdata);
typedef int (*DB_plugin_action_callback2_t) (struct DB_plugin_action_s *action, ddb_action_context_t ctx);
typedef int (*DB_plugin_action_callback2_t) (struct DB_plugin_action_s *action, int ctx);
typedef struct DB_plugin_action_s {
    const char *title;
    const char *name;
    uint32_t flags;
    DB_plugin_action_callback_t callback DEPRECATED_14;
    struct DB_plugin_action_s *next;
#if (DDB_API_LEVEL >= 5)
    DB_plugin_action_callback2_t callback2;
#endif
} DB_plugin_action_t;
enum {
    DDB_PLUGIN_FLAG_LOGGING = 1,
    DDB_PLUGIN_FLAG_REPLAYGAIN = 2,
#if (DDB_API_LEVEL >= 14)
    DDB_PLUGIN_FLAG_IMPLEMENTS_DECODER2 = 4,
#endif
#if (DDB_API_LEVEL >= 15)
    DDB_PLUGIN_FLAG_ASYNC_STOP = 8,
#endif
};
enum {
    DDB_COMMAND_PLUGIN_ASYNC_STOP = 1000,
};
typedef struct ddb_response_s {
    size_t _size;
    int (*append)(struct ddb_response_s *response, char *bytes, size_t size);
} ddb_response_t;
typedef struct DB_plugin_s {
    int32_t type;
    int16_t api_vmajor;
    int16_t api_vminor;
    int16_t version_major;
    int16_t version_minor;
    uint32_t flags; 
    uint32_t reserved1;
    uint32_t reserved2;
    uint32_t reserved3;
    const char *id; 
    const char *name; 
    const char *descr; 
    const char *copyright; 
    const char *website; 
    int (*command) (int cmd, ...);
    int (*start) (void);
    int (*stop) (void);
    int (*connect) (void);
    int (*disconnect) (void);
#if (DDB_API_LEVEL >= 15)
    int (*exec_cmdline) (const char *cmdline, int cmdline_size, ddb_response_t *response);
#else
    int (*exec_cmdline) (const char *cmdline, int cmdline_size);
#endif
    DB_plugin_action_t* (*get_actions) (DB_playItem_t *it);
    int (*message) (uint32_t id, uintptr_t ctx, uint32_t p1, uint32_t p2);
    const char *configdialog;
} DB_plugin_t;
enum {
    DDB_SPEAKER_FRONT_LEFT = 0x1,
    DDB_SPEAKER_FRONT_RIGHT = 0x2,
    DDB_SPEAKER_FRONT_CENTER = 0x4,
    DDB_SPEAKER_LOW_FREQUENCY = 0x8,
    DDB_SPEAKER_BACK_LEFT = 0x10,
    DDB_SPEAKER_BACK_RIGHT = 0x20,
    DDB_SPEAKER_FRONT_LEFT_OF_CENTER = 0x40,
    DDB_SPEAKER_FRONT_RIGHT_OF_CENTER = 0x80,
    DDB_SPEAKER_BACK_CENTER = 0x100,
    DDB_SPEAKER_SIDE_LEFT = 0x200,
    DDB_SPEAKER_SIDE_RIGHT = 0x400,
    DDB_SPEAKER_TOP_CENTER = 0x800,
    DDB_SPEAKER_TOP_FRONT_LEFT = 0x1000,
    DDB_SPEAKER_TOP_FRONT_CENTER = 0x2000,
    DDB_SPEAKER_TOP_FRONT_RIGHT = 0x4000,
    DDB_SPEAKER_TOP_BACK_LEFT = 0x8000,
    DDB_SPEAKER_TOP_BACK_CENTER = 0x10000,
    DDB_SPEAKER_TOP_BACK_RIGHT = 0x20000
};
typedef struct DB_fileinfo_s {
    struct DB_decoder_s *plugin;
    ddb_waveformat_t fmt;
    float readpos;
    DB_FILE *file;
} DB_fileinfo_t;
enum {
    DDB_DECODER_HINT_16BIT = 0x1,
#if (DDB_API_LEVEL >= 8)
    DDB_DECODER_HINT_NEED_BITRATE = 0x2,
    DDB_DECODER_HINT_CAN_LOOP = 0x4,
#endif
#if (DDB_API_LEVEL >= 10)
    DDB_DECODER_HINT_RAW_SIGNAL = 0x8,
#endif
};
typedef struct DB_decoder_s {
    DB_plugin_t plugin;
    DB_fileinfo_t *(*open) (uint32_t hints);
    int (*init) (DB_fileinfo_t *info, DB_playItem_t *it);
    void (*free) (DB_fileinfo_t *info);
    int (*read) (DB_fileinfo_t *info, char *buffer, int nbytes);
    int (*seek) (DB_fileinfo_t *info, float seconds);
    int (*seek_sample) (DB_fileinfo_t *info, int sample);
    DB_playItem_t * (*insert) (ddb_playlist_t *plt, DB_playItem_t *after, const char *fname);
    int (*numvoices) (DB_fileinfo_t *info);
    void (*mutevoice) (DB_fileinfo_t *info, int voice, int mute);
    int (*read_metadata) (DB_playItem_t *it);
    int (*write_metadata) (DB_playItem_t *it);
    const char **exts;
    const char **prefixes;
#if (DDB_API_LEVEL >= 7)
    DB_fileinfo_t *(*open2) (uint32_t hints, DB_playItem_t *it);
#endif
} DB_decoder_t;
typedef struct ddb_decoder2_s {
    DB_decoder_t decoder;
    int (*seek_sample64) (DB_fileinfo_t *info, int64_t sample);
    void *padding[8];
} ddb_decoder2_t;
typedef struct DB_output_s {
    DB_plugin_t plugin;
    int (*init) (void);
    int (*free) (void);
    int (*setformat) (ddb_waveformat_t *fmt);
    int (*play) (void);
    int (*stop) (void);
    int (*pause) (void);
    int (*unpause) (void);
#if (DDB_API_LEVEL >= 11)
    ddb_playback_state_t (*state) (void);
#else
    int (*state) (void);
#endif
    void (*enum_soundcards) (void (*callback)(const char *name, const char *desc, void*), void *userdata);
    ddb_waveformat_t fmt;
    int has_volume;
} DB_output_t;
typedef struct ddb_dsp_context_s {
    struct DB_dsp_s *plugin;
    struct ddb_dsp_context_s *next;
    unsigned enabled : 1;
} ddb_dsp_context_t;
typedef struct DB_dsp_s {
    DB_plugin_t plugin;
    ddb_dsp_context_t* (*open) (void);
    void (*close) (ddb_dsp_context_t *ctx);
    int (*process) (ddb_dsp_context_t *ctx, float *samples, int frames, int maxframes, ddb_waveformat_t *fmt, float *ratio);
    void (*reset) (ddb_dsp_context_t *ctx);
    int (*num_params) (void);
    const char *(*get_param_name) (int p);
    void (*set_param) (ddb_dsp_context_t *ctx, int p, const char *val);
    void (*get_param) (ddb_dsp_context_t *ctx, int p, char *str, int len);
    const char *configdialog;
#if (DDB_API_LEVEL >= 1)
    int (*can_bypass) (ddb_dsp_context_t *ctx, ddb_waveformat_t *fmt);
#endif
} DB_dsp_t;
typedef struct {
    DB_plugin_t plugin;
} DB_misc_t;
typedef struct DB_vfs_s {
    DB_plugin_t plugin;
    const char **(*get_schemes) (void); 
    int (*is_streaming) (void); 
    int (*is_container) (const char *fname); 
    void (*abort) (DB_FILE *stream) DEPRECATED_111;
    DB_FILE* (*open) (const char *fname);
    void (*close) (DB_FILE *f);
    size_t (*read) (void *ptr, size_t size, size_t nmemb, DB_FILE *stream);
    int (*seek) (DB_FILE *stream, int64_t offset, int whence);
    int64_t (*tell) (DB_FILE *stream);
    void (*rewind) (DB_FILE *stream);
    int64_t (*getlength) (DB_FILE *stream);
    const char * (*get_content_type) (DB_FILE *stream);
    void (*set_track) (DB_FILE *f, DB_playItem_t *it);
    int (*scandir) (const char *dir, struct dirent ***namelist, int (*selector) (const struct dirent *), int (*cmp) (const struct dirent **, const struct dirent **));
#if (DDB_API_LEVEL >= 6)
    const char *(*get_scheme_for_name) (const char *fname);
#endif
#if (DDB_API_LEVEL >= 11)
    uint64_t (*get_identifier) (DB_FILE *f);
    void (*abort_with_identifier) (uint64_t identifier);
#endif
} DB_vfs_t;