deadbeef.pxd

        _DB_functions_t_DB_functions_t_streamer_set_shuffle_ft streamer_set_shuffle
        _DB_functions_t_DB_functions_t_streamer_get_shuffle_ft streamer_get_shuffle
        _DB_functions_t_DB_functions_t_streamer_set_repeat_ft streamer_set_repeat
        _DB_functions_t_DB_functions_t_streamer_get_repeat_ft streamer_get_repeat
        _DB_functions_t_DB_functions_t_pl_meta_for_key_with_override_ft pl_meta_for_key_with_override
        _DB_functions_t_DB_functions_t_pl_find_meta_with_override_ft pl_find_meta_with_override
        _DB_functions_t_DB_functions_t_pl_get_meta_with_override_ft pl_get_meta_with_override
        _DB_functions_t_DB_functions_t_pl_meta_exists_with_override_ft pl_meta_exists_with_override
        _DB_functions_t_DB_functions_t_plt_item_set_selected_ft plt_item_set_selected
        _DB_functions_t_DB_functions_t_plt_find_by_name_ft plt_find_by_name
        _DB_functions_t_DB_functions_t_plt_append_ft plt_append
        _DB_functions_t_DB_functions_t_plt_get_head_item_ft plt_get_head_item
        _DB_functions_t_DB_functions_t_plt_get_tail_item_ft plt_get_tail_item
        _DB_functions_t_DB_functions_t_plug_get_path_for_plugin_ptr_ft plug_get_path_for_plugin_ptr
        _DB_functions_t_DB_functions_t_vis_spectrum_listen2_ft vis_spectrum_listen2
        _DB_functions_t_DB_functions_t_plt_insert_dir3_ft plt_insert_dir3
        _DB_functions_t_DB_functions_t_streamer_get_playing_track_safe_ft streamer_get_playing_track_safe

    cpdef enum:
        DB_ACTION_COMMON
        DB_ACTION_SINGLE_TRACK
        DB_ACTION_MULTIPLE_TRACKS
        DB_ACTION_ALLOW_MULTIPLE_TRACKS
        DB_ACTION_CAN_MULTIPLE_TRACKS
        DB_ACTION_DISABLED
        DB_ACTION_PLAYLIST
        DB_ACTION_ADD_MENU
        DB_ACTION_EXCLUDE_FROM_CTX_PLAYLIST

    cpdef enum ddb_action_context_e:
        DDB_ACTION_CTX_MAIN
        DDB_ACTION_CTX_SELECTION
        DDB_ACTION_CTX_PLAYLIST
        DDB_ACTION_CTX_NOWPLAYING
        DDB_ACTION_CTX_COUNT

    ctypedef ddb_action_context_e ddb_action_context_t

    cdef struct DB_plugin_action_s

    ctypedef int (*DB_plugin_action_callback_t)(DB_plugin_action_s* action, void* userdata)

    ctypedef int (*DB_plugin_action_callback2_t)(DB_plugin_action_s* action, ddb_action_context_t ctx)

    cdef struct DB_plugin_action_s:
        const char* title
        const char* name
        uint32_t flags
        DB_plugin_action_callback_t callback
        DB_plugin_action_s* next
        DB_plugin_action_callback2_t callback2

    ctypedef DB_plugin_action_s DB_plugin_action_t

    cpdef enum:
        DDB_PLUGIN_FLAG_LOGGING
        DDB_PLUGIN_FLAG_REPLAYGAIN
        DDB_PLUGIN_FLAG_IMPLEMENTS_DECODER2
        DDB_PLUGIN_FLAG_ASYNC_STOP

    cpdef enum:
        DDB_COMMAND_PLUGIN_ASYNC_STOP

    ctypedef int (*_ddb_response_t_ddb_response_t_ddb_response_s_append_ft)(ddb_response_s* response, char* bytes, size_t size)

    cdef struct ddb_response_s:
        size_t _size
        _ddb_response_t_ddb_response_t_ddb_response_s_append_ft append

    ctypedef ddb_response_s ddb_response_t

    ctypedef int (*_DB_plugin_t_DB_plugin_t_DB_plugin_s_command_ft)(int cmd)

    ctypedef int (*_DB_plugin_t_DB_plugin_t_DB_plugin_s_start_ft)()

    ctypedef int (*_DB_plugin_t_DB_plugin_t_DB_plugin_s_stop_ft)()

    ctypedef int (*_DB_plugin_t_DB_plugin_t_DB_plugin_s_connect_ft)()

    ctypedef int (*_DB_plugin_t_DB_plugin_t_DB_plugin_s_disconnect_ft)()

    ctypedef int (*_DB_plugin_t_DB_plugin_t_DB_plugin_s_exec_cmdline_ft)(const char* cmdline, int cmdline_size, ddb_response_t* response)

    ctypedef DB_plugin_action_t* (*_DB_plugin_t_DB_plugin_t_DB_plugin_s_get_actions_ft)(DB_playItem_t* it)

    ctypedef int (*_DB_plugin_t_DB_plugin_t_DB_plugin_s_message_ft)(uint32_t id, uintptr_t ctx, uint32_t p1, uint32_t p2)

    cdef struct DB_plugin_s:
        int32_t type
        int16_t api_vmajor
        int16_t api_vminor
        int16_t version_major
        int16_t version_minor
        uint32_t flags
        uint32_t reserved1
        uint32_t reserved2
        uint32_t reserved3
        const char* id
        const char* name
        const char* descr
        const char* copyright
        const char* website
        _DB_plugin_t_DB_plugin_t_DB_plugin_s_command_ft command
        _DB_plugin_t_DB_plugin_t_DB_plugin_s_start_ft start
        _DB_plugin_t_DB_plugin_t_DB_plugin_s_stop_ft stop
        _DB_plugin_t_DB_plugin_t_DB_plugin_s_connect_ft connect
        _DB_plugin_t_DB_plugin_t_DB_plugin_s_disconnect_ft disconnect
        _DB_plugin_t_DB_plugin_t_DB_plugin_s_exec_cmdline_ft exec_cmdline
        _DB_plugin_t_DB_plugin_t_DB_plugin_s_get_actions_ft get_actions
        _DB_plugin_t_DB_plugin_t_DB_plugin_s_message_ft message
        const char* configdialog

    ctypedef DB_plugin_s DB_plugin_t

    cpdef enum:
        DDB_SPEAKER_FRONT_LEFT
        DDB_SPEAKER_FRONT_RIGHT
        DDB_SPEAKER_FRONT_CENTER
        DDB_SPEAKER_LOW_FREQUENCY
        DDB_SPEAKER_BACK_LEFT
        DDB_SPEAKER_BACK_RIGHT
        DDB_SPEAKER_FRONT_LEFT_OF_CENTER
        DDB_SPEAKER_FRONT_RIGHT_OF_CENTER
        DDB_SPEAKER_BACK_CENTER
        DDB_SPEAKER_SIDE_LEFT
        DDB_SPEAKER_SIDE_RIGHT
        DDB_SPEAKER_TOP_CENTER
        DDB_SPEAKER_TOP_FRONT_LEFT
        DDB_SPEAKER_TOP_FRONT_CENTER
        DDB_SPEAKER_TOP_FRONT_RIGHT
        DDB_SPEAKER_TOP_BACK_LEFT
        DDB_SPEAKER_TOP_BACK_CENTER
        DDB_SPEAKER_TOP_BACK_RIGHT

    cdef struct DB_fileinfo_s:
        DB_decoder_s* plugin
        ddb_waveformat_t fmt
        float readpos
        DB_FILE* file

    ctypedef DB_fileinfo_s DB_fileinfo_t

    cpdef enum:
        DDB_DECODER_HINT_16BIT
        DDB_DECODER_HINT_NEED_BITRATE
        DDB_DECODER_HINT_CAN_LOOP
        DDB_DECODER_HINT_RAW_SIGNAL

    ctypedef DB_fileinfo_t* (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_open_ft)(uint32_t hints)

    ctypedef int (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_init_ft)(DB_fileinfo_t* info, DB_playItem_t* it)

    ctypedef void (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_free_ft)(DB_fileinfo_t* info)

    ctypedef int (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_read_ft)(DB_fileinfo_t* info, char* buffer, int nbytes)

    ctypedef int (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_seek_ft)(DB_fileinfo_t* info, float seconds)

    ctypedef int (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_seek_sample_ft)(DB_fileinfo_t* info, int sample)

    ctypedef DB_playItem_t* (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_insert_ft)(ddb_playlist_t* plt, DB_playItem_t* after, const char* fname)

    ctypedef int (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_numvoices_ft)(DB_fileinfo_t* info)

    ctypedef void (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_mutevoice_ft)(DB_fileinfo_t* info, int voice, int mute)

    ctypedef int (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_read_metadata_ft)(DB_playItem_t* it)

    ctypedef int (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_write_metadata_ft)(DB_playItem_t* it)

    ctypedef DB_fileinfo_t* (*_DB_decoder_t_DB_decoder_t_DB_decoder_s_open2_ft)(uint32_t hints, DB_playItem_t* it)

    cdef struct DB_decoder_s:
        DB_plugin_t plugin
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_open_ft open
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_init_ft init
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_free_ft free
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_read_ft read
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_seek_ft seek
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_seek_sample_ft seek_sample
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_insert_ft insert
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_numvoices_ft numvoices
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_mutevoice_ft mutevoice
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_read_metadata_ft read_metadata
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_write_metadata_ft write_metadata
        const char** exts
        const char** prefixes
        _DB_decoder_t_DB_decoder_t_DB_decoder_s_open2_ft open2

    ctypedef DB_decoder_s DB_decoder_t

    ctypedef int (*_ddb_decoder2_t_ddb_decoder2_t_ddb_decoder2_s_seek_sample64_ft)(DB_fileinfo_t* info, int64_t sample)

    cdef struct ddb_decoder2_s:
        DB_decoder_t decoder
        _ddb_decoder2_t_ddb_decoder2_t_ddb_decoder2_s_seek_sample64_ft seek_sample64
        void* padding[8]

    ctypedef ddb_decoder2_s ddb_decoder2_t

    ctypedef int (*_DB_output_t_DB_output_t_DB_output_s_init_ft)()

    ctypedef int (*_DB_output_t_DB_output_t_DB_output_s_free_ft)()

    ctypedef int (*_DB_output_t_DB_output_t_DB_output_s_setformat_ft)(ddb_waveformat_t* fmt)

    ctypedef int (*_DB_output_t_DB_output_t_DB_output_s_play_ft)()

    ctypedef int (*_DB_output_t_DB_output_t_DB_output_s_stop_ft)()

    ctypedef int (*_DB_output_t_DB_output_t_DB_output_s_pause_ft)()

    ctypedef int (*_DB_output_t_DB_output_t_DB_output_s_unpause_ft)()

    ctypedef ddb_playback_state_t (*_DB_output_t_DB_output_t_DB_output_s_state_ft)()

    ctypedef void (*_DB_output_t_DB_output_t_DB_output_s_enum_soundcards_callback_ft)(const char* name, const char* desc, void*)

    ctypedef void (*_DB_output_t_DB_output_t_DB_output_s_enum_soundcards_ft)(_DB_output_t_DB_output_t_DB_output_s_enum_soundcards_callback_ft callback, void* userdata)

    cdef struct DB_output_s:
        DB_plugin_t plugin
        _DB_output_t_DB_output_t_DB_output_s_init_ft init
        _DB_output_t_DB_output_t_DB_output_s_free_ft free
        _DB_output_t_DB_output_t_DB_output_s_setformat_ft setformat
        _DB_output_t_DB_output_t_DB_output_s_play_ft play
        _DB_output_t_DB_output_t_DB_output_s_stop_ft stop
        _DB_output_t_DB_output_t_DB_output_s_pause_ft pause
        _DB_output_t_DB_output_t_DB_output_s_unpause_ft unpause
        _DB_output_t_DB_output_t_DB_output_s_state_ft state
        _DB_output_t_DB_output_t_DB_output_s_enum_soundcards_ft enum_soundcards
        ddb_waveformat_t fmt
        int has_volume

    ctypedef DB_output_s DB_output_t

    cdef struct ddb_dsp_context_s:
        DB_dsp_s* plugin
        ddb_dsp_context_s* next
        unsigned enabled

    ctypedef ddb_dsp_context_s ddb_dsp_context_t

    ctypedef ddb_dsp_context_t* (*_DB_dsp_t_DB_dsp_t_DB_dsp_s_open_ft)()

    ctypedef void (*_DB_dsp_t_DB_dsp_t_DB_dsp_s_close_ft)(ddb_dsp_context_t* ctx)

    ctypedef int (*_DB_dsp_t_DB_dsp_t_DB_dsp_s_process_ft)(ddb_dsp_context_t* ctx, float* samples, int frames, int maxframes, ddb_waveformat_t* fmt, float* ratio)

    ctypedef void (*_DB_dsp_t_DB_dsp_t_DB_dsp_s_reset_ft)(ddb_dsp_context_t* ctx)

    ctypedef int (*_DB_dsp_t_DB_dsp_t_DB_dsp_s_num_params_ft)()

    ctypedef const char* (*_DB_dsp_t_DB_dsp_t_DB_dsp_s_get_param_name_ft)(int p)

    ctypedef void (*_DB_dsp_t_DB_dsp_t_DB_dsp_s_set_param_ft)(ddb_dsp_context_t* ctx, int p, const char* val)

    ctypedef void (*_DB_dsp_t_DB_dsp_t_DB_dsp_s_get_param_ft)(ddb_dsp_context_t* ctx, int p, char* str, int len)

    ctypedef int (*_DB_dsp_t_DB_dsp_t_DB_dsp_s_can_bypass_ft)(ddb_dsp_context_t* ctx, ddb_waveformat_t* fmt)

    cdef struct DB_dsp_s:
        DB_plugin_t plugin
        _DB_dsp_t_DB_dsp_t_DB_dsp_s_open_ft open
        _DB_dsp_t_DB_dsp_t_DB_dsp_s_close_ft close
        _DB_dsp_t_DB_dsp_t_DB_dsp_s_process_ft process
        _DB_dsp_t_DB_dsp_t_DB_dsp_s_reset_ft reset
        _DB_dsp_t_DB_dsp_t_DB_dsp_s_num_params_ft num_params
        _DB_dsp_t_DB_dsp_t_DB_dsp_s_get_param_name_ft get_param_name
        _DB_dsp_t_DB_dsp_t_DB_dsp_s_set_param_ft set_param
        _DB_dsp_t_DB_dsp_t_DB_dsp_s_get_param_ft get_param
        const char* configdialog
        _DB_dsp_t_DB_dsp_t_DB_dsp_s_can_bypass_ft can_bypass

    ctypedef DB_dsp_s DB_dsp_t

    ctypedef struct DB_misc_t:
        DB_plugin_t plugin

    ctypedef const char** (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_get_schemes_ft)()

    ctypedef int (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_is_streaming_ft)()

    ctypedef int (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_is_container_ft)(const char* fname)

    ctypedef void (*_DB_vfs_t_DB_vfs_t_DB_vfs_s_abort_ft)(DB_FILE* stream)
